--- a/style.css
+++ b/style.css
@@ -1,11 +1,43 @@
 /*
 
-Theme Name:     WooCommerce Template
-Author:         UniqSoft
-Author URI:     http://uniqsoft.pl
-Template:     	storefront
-
+Theme Name:     Moje WooCommerce 
+Author:         Nesky777
+Author URI:     
+Template: storefront
+Version: 1.0.0
 */
 
 body{
+}
+
+/* Styl dla niestandardowego menu */
+.custom-menu {
+    background-color: #f5f5f5;
+    padding: 15px 30px;
+    border-radius: 10px;
+    margin: 20px 0;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.custom-menu ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    gap: 20px;
+}
+
+.custom-menu li {
+    display: inline;
+}
+
+.custom-menu a {
+    text-decoration: none;
+    color: #0073aa;
+    font-weight: bold;
+    transition: color 0.3s;
+}
+
+.custom-menu a:hover {
+    color: #005177;
 }
